# narada

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
scripts/: verify.ps1
src/narada/: cli.py  config.py  devices.py  doctor.py  live_notes.py  logging_setup.py  performance.py  pipeline.py  redaction.py  server.py  start_runtime.py  writer.py
src/narada/asr/: __init__.py  base.py  faster_whisper_engine.py  model_discovery.py  model_download.py  whisper_cpp_engine.py
src/narada/audio/: __init__.py  capture.py  mixer.py
src/narada/audio/backends/: __init__.py  linux.py  macos.py  types.py  windows.py
src/narada/setup/: __init__.py  assistant.py
story/: Episode-1.md  Episode-10.md  Episode-2.md  Episode-3.md  Episode-4.md  Episode-5.md  Episode-6.md  Episode-7.md  Episode-8.md  Episode-9.md
tests/: test_backend_probe_smoke.py  test_capture_backends.py  test_capture_handle.py  test_cli_live_runtime.py  test_config.py  test_devices.py  test_doctor_models.py  test_faster_whisper_engine.py  test_live_notes.py  test_logging_setup.py  test_mixer.py  test_model_discovery.py  test_model_download.py  test_packaging_metadata.py  test_performance.py  test_pipeline.py  test_redaction.py  test_server_integration.py  test_setup_assistant.py  test_start_integration.py  test_start_runtime.py  test_whisper_cpp_engine.py  test_writer.py
